--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,11 @@ jobs:
     machine: true
     steps:
       - checkout
-      - gcr/gcr-auth
-      - gcr/build-image:
+      - gcp-gcr/gcr-auth
+      - gcp-gcr/build-image:
           image: test-server
           tag: "v2" #Change version number e.g to 'v3' when updating application
-      - gcr/push-image:
+      - gcp-gcr/push-image:
           image: test-server
           tag: "v2" #Change version number e.g to 'v3' when updating application
 
