--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - gcp-gke/rollout-image:
           cluster: test-cluster
           deployment: test-server-app
-          container: test-server
+          container: test-server-sha256
           image: gcr.io/crucial-limiter-258015/test-server@sha256:f84545274faee6302c008b5b0dad0bb842445e81682b1480dc0d37c98d1a01c6 # change version when updating
 workflows:
   build_update_deploy:
