--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     machine: true
     steps:
       - checkout
-      - gcp-gcr/gcr-auth
+      - gcp-gcr/gcr-auth:
           context: dev
       - gcp-gcr/build-image:
           context: dev
