--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
   gcp-gke: circleci/gcp-gke@0.2.0
-  gcp-gcr: circleci/gcp-gcr@0.6.1
+  gcp-gcr: carecloud/gcp-gcr@0.0.3
 jobs:
   build:
     description: Install npm
@@ -31,7 +31,6 @@ jobs:
       - checkout
       - gcp-gcr/build-and-push-image:
           context: dev
-          extra_build_args: '--build-arg auth_token=$NPM_TOKEN'
           image: test-server
           tag: "v5" #Change version number when updating application
 
