--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
   gcp-gke: circleci/gcp-gke@0.2.0
-  gcp-gcr: carecloud/gcp-gcr@0.0.3
+  gcp-gcr: circleci/gcp-gcr@0.6.1
 jobs:
   build:
     description: Install npm
