--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,15 +24,10 @@ jobs:
           cache-key: package.json
           # Ignore non-checksum cache hits
           use-strict-cache: true
-  Build-Push-Image-Docker:
-    description: Build and push image to Google Container Registry
-    machine: true
-    steps:
-      - checkout
-      - gcp-gcr/build-and-push-image:
-          context: dev
-          image: test-server
-          tag: "v5" #Change version number when updating application
+  - gcp-gcr/build-and-push-image:
+    context: dev
+    image: test-server
+    tag: "v5" #Change version number when updating application
 
   deploy:
     description: Deploy application to Google Kubernetes Engine
@@ -52,9 +47,9 @@ workflows:
   build_update_deploy:
     jobs:
       - build
-      - Build-Push-Image-Docker:
+      - gcp-gcr/build-and-push-image:
           requires:
             - build
       - deploy:
           requires:
-            - Build-Push-Image-Docker
+            - gcp-gcr/build-and-push-image
