--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,26 +4,6 @@ orbs:
   gcp-gke: circleci/gcp-gke@0.2.0
   gcp-gcr: circleci/gcp-gcr@0.6.1
 jobs:
-  build:
-    description: Install npm
-    # machine option runs your jobs in a dedicated, ephemeral VM that has the following specifications:
-    machine: true
-    steps:
-      - checkout
-      # Install node
-      - node/install
-      # Install npm
-      - node/install-npm
-      # Download and cache dependencies
-      - node/with-cache:
-          steps:
-            - run:
-                name: Install application dependencies
-                command: npm install
-          # Save cache
-          cache-key: package.json
-          # Ignore non-checksum cache hits
-          use-strict-cache: true
   deploy:
     description: Deploy application to Google Kubernetes Engine
     machine: true
@@ -37,17 +17,17 @@ jobs:
           cluster: test-cluster
           deployment: test-server-app
           container: test-server-container
-          image: gcr.io/crucial-limiter-258015/test-server:v5 # change version when updating
+          image: gcr.io/crucial-limiter-258015/test-server:v6 # change version when updating
 workflows:
   build_update_deploy:
     jobs:
-      - build
       - gcp-gcr/build-and-push-image:
           context: dev
           image: test-server
-          tag: "v5" #Change version number when updating application
+          tag: "v6" #Change version number when updating application
           requires:
             - build
       - deploy:
+          context: dev
           requires:
             - gcp-gcr/build-and-push-image
