--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ workflows:
     jobs:
       - gcp-gcr/build-and-push-image:
           context: dev
-          extra_build_args: "--build-arg token=$NPM_TOKEN --build-arg se=1"
+          extra_build_args: "--build-arg token=$NPM_TOKEN --build-arg token_aws=$NPM_TOKEN"
           image: test-server
           tag: "v6" #Change version number when updating application
       - deploy:
